# optic_backend

./: .gitignore  Cargo.toml  README.md
sql/frame_brands/: add_frame_brand.sql  delete_frame_brand.sql  get_frame_brand.sql  get_frame_brands.sql  update_frame_brand.sql
sql/sale_kinds/: get_sale_kind.sql  get_sale_kinds.sql
sql/sales/: add_sale.sql  delete_sale.sql  get_sale.sql  get_sales.sql  update_sale.sql
src/: config.rs  errors.rs  handlers.rs  main.rs  models.rs
src/db/: frame_brands.rs  sale_kinds.rs  sales.rs  users.rs
src/handlers/: frame_brands.rs  sale_kinds.rs  sales.rs  users.rs
