[package]
name = "optic_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
config = "0.13"
deadpool-postgres = { version = "0.10", features = ["serde"] }
derive_more = "0.99"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = "0.7"
